--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css" />
     <title>Document</title>
@@ -13,14 +14,14 @@
       <div class="appWrapper">
       <div class="weatherApp">
   <div class="overview">
-        <h1>
+        <h1 id="city">
     New York
   </h1>
   <ul>
     <li>
       Friday 05:00
     </li>
-    <li>
+    <li id="description">
       clear
     </li>
     </ul>
@@ -33,13 +34,10 @@
       <div class="col-6">
         <ul>
           <li>
-            precipitation: 0%
+            humidity:<span id="humidity"> 73</span>%
           </li>
           <li>
-            humidity: 73%
-          </li>
-          <li>
-            wind:2 km/hr
+            wind:<span id="wind">2</span> km/hr
           </li>
         </ul>
       </div>
