--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     New York
   </h1>
   <ul>
-    <li>
-      Friday 05:00
+    <li >last updated:<span id="date"> </span>
     </li>
     <li id="description">
       clear
