--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
     <div class="container">
       <div class="appWrapper">
       <div class="weatherApp">
+        <form id="searchInput" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input type="search"
+              placeholder="input city..."
+              class="form-control"
+              id="cityInput"
+              autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input type="submit"
+              value="search"
+              class="btn btn-primary w-100"/>
+            </div>
+          </div>
+        </form>
   <div class="overview">
         <h1 id="city">
     New York
