added class=active to modify from java

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="col-6">
         <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" width="72px" id="image"/>
-        <strong id="temperature">12</strong><span id="units"><a href="#" id="celsius">°C</a> |<a href="#" id="farenheit">°F</a></span> 
+        <strong id="temperature">12</strong><span id="units"><a href="#" id="celsius" class="active">°C</a> |<a href="#" id="farenheit">°F</a></span> 
       </div>
       <div class="col-6">
         <ul>
