added java to the forecast. ready for api intergretion

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </ul>
       </div>
     </div>
+    <div class="weatherforecast" id="forecast"></div>
     </div>
     <small>
       <a href="https://github.com/chinazazi?tab=repositories">open-sourced</a> by zazi
