added a new button to show current weather of user and debugged my JS

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </ul>
       </div>
     </div>
+    <button id="btn">Current Weather</button>
     <div class="weatherforecast" id="forecast"></div>
     </div>
     <small>
